# orin_nano_kit

./: .gitignore  README.md  jetson-orin.txt  kernel_tegra234-p3768-0000+p3767-0000.dtb.new  kernel_tegra234-p3768-0000+p3767-0003-nv.dtb
.github/: copilot-instructions.md
.github/skills/terminal-command-inject/: SKILL.md
.github/skills/terminal-command-inject/scripts/: terminal_command_runner.py
JetPack_6.2.2_Linux/NVIDIA_Nsight_Perf_SDK/NvPerf/doc/html/: index.html
JetPack_6.2.2_Linux/NVIDIA_Nsight_Perf_SDK/NvPerf/doc/html/CopyrightAndLicenses/: index.html
JetPack_6.2.2_Linux/NVIDIA_Nsight_Perf_SDK/NvPerf/doc/html/search/: htmlFileInfoList.js  htmlFileList.js  index-1.js  index-2.js  index-3.js
JetPack_6.2.2_Linux/NVIDIA_Nsight_Perf_SDK/NvPerf/doc/res/: style.css
JetPack_6.2.2_Linux/NVIDIA_Nsight_Perf_SDK/NvPerf/include/linux-l4t-a64/: nvperf_host_impl.h
JetPack_6.2.2_Linux/NVIDIA_Nsight_Perf_SDK/Samples/OGL/gtruc/ogl-samples/: CMakeLists.txt  LICENSE.md  readme.md
JetPack_6.2.2_Linux/NVIDIA_Nsight_Perf_SDK/Samples/OGL/gtruc/ogl-samples/samples/: CMakeLists.txt  context.hpp  gl-420-draw-base-instance.cpp  gl-430-program-compute.cpp
JetPack_6.2.2_Linux/NVIDIA_Nsight_Perf_SDK/Samples/Tests/Include/: TestCommon.h  doctest_proxy.h  doctest_reporters.h
JetPack_6.2.2_Linux/NVIDIA_Nsight_Perf_SDK/Samples/Tests/Modules/: CMakeLists.txt
JetPack_6.2.2_Linux/NVIDIA_Nsight_Perf_SDK/Samples/Tests/Modules/D3D11/: CMakeLists.txt  D3D11Main.cpp  D3D11Utilities.cpp  D3D11Utilities.h  D3D11_DeviceFunctions.cpp  D3D11_RangeProfiler.cpp  D3D11_ReportGenerator.cpp
JetPack_6.2.2_Linux/NVIDIA_Nsight_Perf_SDK/Samples/Tests/Modules/D3D12/: CMakeLists.txt  D3D12Main.cpp  D3D12Utilities.cpp  D3D12Utilities.h  D3D12_MiniTrace.cpp  D3D12_PeriodicSampler.cpp  D3D12_ReportGenerator.cpp
JetPack_6.2.2_Linux/NVIDIA_Nsight_Perf_SDK/Samples/Tests/Modules/D3D12/HeaderSanity/: HeaderSanity_NvPerfD3D.cpp  HeaderSanity_NvPerfD3D12.cpp  HeaderSanity_NvPerfMiniTraceD3D12.cpp  HeaderSanity_NvPerfPeriodicSamplerD3D12.cpp  HeaderSanity_NvPerfRangeProfilerD3D12.cpp  HeaderSanity_NvPerfReportGeneratorD3D12.cpp
JetPack_6.2.2_Linux/NVIDIA_Nsight_Perf_SDK/Samples/Tests/Modules/Device/: CMakeLists.txt  DeviceMain.cpp  DeviceUtilities.cpp  DeviceUtilities.h  Device_PeriodicSamplerGpu.cpp
JetPack_6.2.2_Linux/NVIDIA_Nsight_Perf_SDK/Samples/Tests/Modules/Device/HeaderSanity/: HeaderSanity_NvPerfPeriodicSamplerCommon.cpp  HeaderSanity_NvPerfPeriodicSamplerGpu.cpp
JetPack_6.2.2_Linux/NVIDIA_Nsight_Perf_SDK/Samples/Tests/Modules/EGL/: CMakeLists.txt  EGLMain.cpp  EGLUtilities.h  EGL_ReportGenerator.cpp
JetPack_6.2.2_Linux/NVIDIA_Nsight_Perf_SDK/Samples/Tests/Modules/EGL/HeaderSanity/: HeaderSanity_NvPerfEGL.cpp  HeaderSanity_NvPerfRangeProfilerEGL.cpp  HeaderSanity_NvPerfReportGeneratorEGL.cpp
JetPack_6.2.2_Linux/NVIDIA_Nsight_Perf_SDK/Samples/Tests/Modules/OGL/: CMakeLists.txt  OpenGLMain.cpp  OpenGLUtilities.h  OpenGL_ReportGenerator.cpp
JetPack_6.2.2_Linux/NVIDIA_Nsight_Perf_SDK/Samples/Tests/Modules/OGL/HeaderSanity/: HeaderSanity_NvPerfOpenGL.cpp  HeaderSanity_NvPerfRangeProfilerOpenGL.cpp  HeaderSanity_NvPerfReportGeneratorOpenGL.cpp
JetPack_6.2.2_Linux/NVIDIA_Nsight_Perf_SDK/Samples/Tests/Modules/Offline/: CMakeLists.txt  Offline.h  OfflineMain.cpp  Offline_CounterData.cpp  Offline_CpuMarkerTrace.cpp  Offline_HtmlReport.cpp  Offline_HudDataModel.cpp  Offline_HudDataModel_SupportedChips.h  Offline_MetricsEvaluator.cpp  Offline_ScopeExitGuard.cpp
JetPack_6.2.2_Linux/NVIDIA_Nsight_Perf_SDK/Samples/Tests/Modules/Offline/HeaderSanity/: HeaderSanity_NvPerfCommonHtmlTemplates.cpp  HeaderSanity_NvPerfCounterConfiguration.cpp  HeaderSanity_NvPerfCounterData.cpp  HeaderSanity_NvPerfDeviceProperties.cpp  HeaderSanity_NvPerfHudConfigurationsAD10X.cpp  HeaderSanity_NvPerfHudConfigurationsGA10B.cpp  HeaderSanity_NvPerfHudConfigurationsGA10X.cpp  HeaderSanity_NvPerfHudConfigurationsHAL.cpp  HeaderSanity_NvPerfHudConfigurationsTU10X.cpp  HeaderSanity_NvPerfHudConfigurationsTU11X.cpp  HeaderSanity_NvPerfHudDataModel.cpp  HeaderSanity_NvPerfHudImPlotRenderer.cpp  HeaderSanity_NvPerfInit.cpp  HeaderSanity_NvPerfMetricsConfigBuilder.cpp  HeaderSanity_NvPerfMetricsEvaluator.cpp  HeaderSanity_NvPerfRangeProfiler.cpp  HeaderSanity_NvPerfReportDefinition.cpp  HeaderSanity_NvPerfReportDefinitionAD10X.cpp  HeaderSanity_NvPerfReportDefinitionGA10X.cpp  HeaderSanity_NvPerfReportDefinitionHAL.cpp  HeaderSanity_NvPerfReportDefinitionTU10X.cpp  HeaderSanity_NvPerfReportDefinitionTU11X.cpp  HeaderSanity_NvPerfReportGenerator.cpp
JetPack_6.2.2_Linux/NVIDIA_Nsight_Perf_SDK/Samples/Tests/Modules/Vulkan/: CMakeLists.txt  VulkanMain.cpp  VulkanUtilities.cpp  VulkanUtilities.h  Vulkan_HudTextRenderer.cpp  Vulkan_MiniTrace.cpp  Vulkan_PeriodicSampler.cpp  Vulkan_ReportGenerator.cpp
JetPack_6.2.2_Linux/NVIDIA_Nsight_Perf_SDK/Samples/Tests/Modules/Vulkan/HeaderSanity/: HeaderSanity_NvPerfMiniTraceVulkan.cpp  HeaderSanity_NvPerfPeriodicSamplerVulkan.cpp  HeaderSanity_NvPerfRangeProfilerVulkan.cpp  HeaderSanity_NvPerfReportGeneratorVulkan.cpp  HeaderSanity_NvPerfVulkan.cpp
JetPack_6.2.2_Linux/NVIDIA_Nsight_Perf_SDK/Samples/Vulkan/SaschaWillems/: CMakeLists.txt
JetPack_6.2.2_Linux/NVIDIA_Nsight_Perf_SDK/Samples/Vulkan/SaschaWillems/base/: CMakeLists.txt  vulkanexamplebase.cpp
JetPack_6.2.2_Linux/NVIDIA_Nsight_Perf_SDK/Samples/Vulkan/nvpro-samples/vk_raytracing_tutorial_KHR/: CMakeLists.txt
JetPack_6.2.2_Linux/NVIDIA_Nsight_Perf_SDK/Samples/Vulkan/nvpro-samples/vk_raytracing_tutorial_KHR/animation/: CMakeLists.txt  hello_vulkan.cpp  hello_vulkan.h  main.cpp
JetPack_6.2.2_Linux/NVIDIA_Nsight_Perf_SDK/Samples/Vulkan/nvpro-samples/vk_raytracing_tutorial_KHR/indirect_scissor_Continuous/: CMakeLists.txt  hello_vulkan.cpp  hello_vulkan.h  main.cpp
JetPack_6.2.2_Linux/NVIDIA_Nsight_Perf_SDK/Samples/Vulkan/nvpro-samples/vk_raytracing_tutorial_KHR/indirect_scissor_HUD/: CMakeLists.txt  hello_vulkan.h  main.cpp
JetPack_6.2.2_Linux/NVIDIA_Nsight_Perf_SDK/Samples/cmake/: NvPerfConfig.cmake  NvPerfUtilityConfig.cmake
(+20 files in other folders)
